# beeMultiTargetTracking

./: CMakeLists.txt  Config.cfg  Definitions.hpp  README.md  main.cpp
ImageProcessing/: ImageProcessingEngine.cpp  ImageProcessingEngine.hpp
Parameters/: ParameterHandler.cpp  ParameterHandler.hpp
Tracking/: HungarianAlgorithm.cpp  HungarianAlgorithm.hpp  KalmanFilter.cpp  KalmanFilter.hpp  MultiTargetTracker.cpp  MultiTargetTracker.hpp
